<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- item android:id="@+id/take_picture" android:title="@string/Take_Picture"
        android:icon="@drawable/camera_icon_32x32" / -->

    <item android:id="@+id/import_pics" android:title="@string/Import"
        android:icon="@drawable/imageimporticon"
        android:onClick="importPics"/>

    <item android:id="@+id/move_img_bk" android:title="@string/return_image"
        android:icon="@drawable/imagereturnicon"
        android:onClick="moveImagesBack"/>

    <item android:title="@string/Delete_Images" android:id="@+id/delete_images"
        android:icon="@drawable/imagedeleteicon"
        android:onClick="deleteImages"/>

    <item android:id="@+id/change_pwd" android:title="@string/change_pwd"
        android:icon="@drawable/lockediticon"
        android:onClick="changePwd"/>

    <item android:id="@+id/logout" android:title="@string/logout"
        android:icon="@drawable/logouticon"
        android:onClick="logOut"/>

    <item android:id="@+id/about" android:title="@string/about"
        android:icon="@drawable/about"
        android:visible="false">

    </item>
</menu>